# bakers-registry-cli

./: .gitignore  Makefile  README.md  pyproject.toml
bakers_registry/: cli.py  colored.py  core.py  encoding.py
bakinreg/: cli.py  colored.py
